Add worker logs/stats endpoints
